# gsh

./: .gitignore  CLAUDE.md  CONTEXT_ENGINEERING.md  Cargo.toml  EXAMPLES.md  README.md  TODO.claude  TODO.md  bench.py  config.example.toml  gsh.plugin.zsh  gsh_claude.md  install.sh
examples/flows/: research-consensus.toml  simple-pub-test.toml
gsh-cli/: Cargo.toml
gsh-cli/src/: main.rs
gsh-daemon/: Cargo.toml
gsh-daemon/scripts/: test-observability.sh
gsh-daemon/src/: config.rs  lib.rs  main.rs  protocol.rs  state.rs
gsh-daemon/src/agent/: mod.rs  tools.rs
gsh-daemon/src/context/: accumulator.rs  mod.rs  retriever.rs
gsh-daemon/src/flow/: engine.rs  memory.rs  mod.rs  parser.rs  pub_tools.rs  publication.rs  roles.rs
gsh-daemon/src/mcp/: client.rs  handler.rs  mod.rs
gsh-daemon/src/observability/: cost.rs  dashboard.rs  events.rs  logger.rs  mod.rs
gsh-daemon/src/provider/: anthropic.rs  deepseek.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openai_responses.rs  rig_adapt.rs  together.rs  zhipu.rs
gsh-daemon/src/session/: mod.rs
gsh-daemon/src/tests/: context_integration.rs  mod.rs
gsh-daemon/src/tmux/: manager.rs  mod.rs
gsh-daemon/tests/: agent_integration.rs  rig_glm5_integration.rs
