[package]
name = "gsh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI client for gsh - an agentic shell"

[[bin]]
name = "gsh"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
