[package]
name = "gsh-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Daemon for gsh - an agentic shell"

[[bin]]
name = "gsh-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
glob.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
async-trait.workspace = true

tokio-stream = "0.1"
futures-util = "0.3"
which = "7"
ratatui = "0.30.0"
crossterm = "0.29.0"
daemonize = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3.24.0"
